--- a/templates/login.html
+++ b/templates/login.html
@@ -3,21 +3,11 @@
 <head>
     <title>YAMP: Login</title>
     <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+    <script type="text/javascript" src="static/js/common.js"></script>
+
 </head>
 <body>
     <header>
-        <div class="header-overlay"></div>
-        <div class="header-content">
-            <div class="logo-container">
-                <a href="/">
-                    <img src="static/img/YAMP_logo.png" alt="YAMP Logo" id="logo" />
-                </a>
-            </div>
-            <div class="header-text">
-                <h1>Welcome to YAMP!</h1>
-                <h3>The Ultimate Youtube Ad Matching Platform</h3>
-            </div>
-        </div>
     </header>
 
     <div class="form-container">
@@ -34,10 +24,6 @@
     </div>
 
     <footer>
-        <div class="footer-content">
-            <a href="sotube">About SoTube</a>
-            <p>&copy; 2023 YAMP. All rights reserved.</p>
-        </div>
     </footer>
 
     <script>
