--- a/templates/register.html
+++ b/templates/register.html
@@ -22,12 +22,12 @@
             <input id="reg_btn" type="submit" value="Register">
             <p id="errorMessage" style="display: none; color: red;"></p>
         </form>
-        <p>Already have an account? <a class="login-link" href="login">Login now</a></p>
+        <p style = 'margin-bottom : 100px;'>Already have an account? <a class="login-link" href="login">Login now</a></p>
     </div>
 
     <footer>
     </footer>
-    
+
     <script>
 
         var email_exists = false;
