--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
             <input type="submit" value="Login">
             <p id="errorText" style="color: red;"></p>
         </form>
-        <p>Not registered yet? <a class="register-link" href="/register">Register now</a></p>
+        <p style = 'margin-bottom : 100px;'>Not registered yet? <a class="register-link" href="/register">Register now</a></p>
     </div>
 
     <footer>
