--- a/styles.css
+++ b/styles.css
@@ -697,7 +697,17 @@ input[type="submit"]:active {
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-  /* Add this CSS code to your existing styles.css file or add it to a new CSS file */
+/* proposal.html specific styles */
+
+#proposal-form select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+}
+
 .search-container {
     display: flex;
     align-items: center;
@@ -712,4 +722,95 @@ input[type="submit"]:active {
 #search-button {
     margin-left: 10px;
     padding: 8px 12px;
+}
+
+/* Additional CSS for overview.html */
+
+#channel-overview {
+    margin: 30px;
+    margin-bottom: 200px;
+}
+
+#channel-overview h2 {
+    color: #1a1a1a;
+    font-size: 1.5em;
+    margin-bottom: 20px;
+}
+
+.search-container {
+    margin-bottom: 20px;
+}
+
+#search-input {
+    padding: 10px;
+    width: 300px;
+    font-size: 16px;
+}
+
+#search-input::placeholder {
+    color: #999;
+}
+
+.search-container button {
+    padding: 10px 15px;
+    font-size: 16px;
+    background-color: #F38181;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.search-container button:hover {
+    background-color: #F38181;
+}
+
+.overview-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.channel-item {
+    width: calc(50% - 20px);
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
+}
+
+.channel-item:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.channel-info h3 {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+
+.channel-info p {
+    margin: 0;
+    margin-bottom: 5px;
+    font-size: 14px;
+}
+
+.channel-info p:last-child {
+    margin-bottom: 0;
+}
+
+.channel-info img {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 10px;
+    border-radius: 50%;
+}
+
+.channel-item img {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 10px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
 }
