--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -21,7 +21,7 @@
     
     <section id="feedback">
         <h2>Feedback</h2>
-        <form id="feedback-form", action = '/getFeedback', method="POST">
+        <form id="feedback-form", action = '/updateFeedback', method="POST">
             <label for="voucher-usage">광고를 통한 바우처 이벤트 기간 동안 바우처 이용 건수는 얼마나 되나요?</label>
             <input type="text" id="voucher-usage" name="voucher-usage">
 
