--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -22,7 +22,13 @@
         <h2>Member Information</h2>
         <div class="box">
             <div class="profile-container">
-                <img src="profile-image.jpg" alt="Profile Image">
+                <!-- <div class="image-container"> -->
+                <img src="static/img/Sotube_logo.png" alt="Profile Image">
+                <!-- <form id="profile-upload" action="/upload" method="post" enctype="multipart/form-data">
+                    <input type="file" name="image" accept="image/*">
+                    <input type="submit">
+                </form>
+            </div> -->
                 <div class="info-container">
                     <p><strong>Name:</strong> 
                     <span class="name_container">
