--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -749,7 +749,7 @@ input[type="submit"]:active {
 
 #channel-overview {
     margin: 30px;
-    margin-bottom: 200px;
+    margin-bottom: 230px;
 }
 
 #channel-overview h2 {
@@ -835,3 +835,81 @@ input[type="submit"]:active {
     object-fit: cover;
     object-position: center;
 }
+.search-container {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+.autocomplete {
+    position: relative;
+    margin-right: 10px;
+}
+
+.autocomplete input {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    width: 200px;
+}
+
+.autocomplete #suggestions {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    background: #fff;
+    padding: 10px;
+    display: none;
+    box-sizing: border-box;
+    max-height: 150px;
+    overflow-y: auto;
+}
+
+.autocomplete #suggestions div {
+    padding: 5px 0;
+    cursor: pointer;
+}
+
+.autocomplete #suggestions div:hover {
+    background: #ddd;
+}
+
+#search_btn {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    background: #F38181;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+#search_btn:hover {
+    background: #ea6a6a;
+}
+
+/* .image-container{
+    width:150px;
+    margin-right : 100px;
+}
+
+#profile-upload {
+    display : block;
+    margin-bottom : 0px;
+}
+
+.image-container #profile-upload input{
+    width : auto;
+    margin-right : 20px;
+}
+
+.image-container #profile-upload input[type='submit']{
+    height : 10px;
+    width : auto;
+    font-size : 5px;
+    margin-right : 20px;
+} */
