--- a/templates/proposal.html
+++ b/templates/proposal.html
@@ -5,6 +5,16 @@
     <link rel="stylesheet" type="text/css" href="static/css/styles.css">
     <script type="text/javascript" src="static/js/common.js"></script>
     <script type="text/javascript" src="static/js/user.js"></script>
+    <style>
+        .search-container {
+            padding-left : 0px;
+        }
+
+        #proposal-form input[name="youtuber-name"]{
+            margin-bottom : 0px;
+            width : 200px;
+        }
+    </style>
 </head>
 <body>
     <header>
