--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -179,7 +179,7 @@
                                 alert('Feedback already submitted for this service!');
                                 return;
                             }
-                            window.location.href = '/feedback';
+                            window.location.href = `/feedback#${item.service}`;
                         }
 
                         serviceCard.appendChild(serviceH3);
